See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.93.00

              Fix bug: fails with more than two operands for -mulitply,
              -minimum, -maximum, -nand, and -nor.

20.09.26 BJH  Release 10.92.00

              pnmcrop: Make -margin effective with -blank-image=minimize.

              pnmnorm: With bounds specified as -bpercent or -bsingle and
              -wpercent or -wsingle, and the image has only one brightness,
              don't attempt any normalization - leave image as is.  (Previous
              version produces all black with -keephues).

              pgmtopbm: Add -randomseed.

              pamfunc: Fix always wrong output with -not.  Always broken.
              (-not was new in Netpbm 10.40 (September 2007)).

              pamdepth: fix bug: doesn't work on PAM with black and white
              tuple type.

              pnmnorm: Fix bug: output too dark when -bpercent and -wpercent
              indicate overlapping values.  Broken since Netpbm 10.43 (June
              2008).

              pbmtext: Fix double-free crash with -font .  Introduced in
              Netpbm 10.91 (June 2020).

              jpeg2ktopam: Fix crash whenever the program fails.  Broken in
              Netpbm 10.42 (March 2008).

              pamtojpeg2k: Fix failure with most -progression values.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              pamtojpeg2k: Fix wrong result with -tilegrdtly.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              pamarith: Fix crash with -compare where inputs are PBM or
              BLACKANDWHITE PAM.  Broken in Netpbm 10.14 (February 2003).

              pamfunc: Fix crash with -changemaxval and PBM or BLACKANDWHITE
              PAM input.  Always broken.  -changemaxval was new in Netpbm
              10.65 (December 2013).
